--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
-{%- include head.html -%}
+Under construction
 
+
+{%- include head.html -%}
+<!--
 <body>
 
   {%- include header.html -%}
@@ -34,5 +37,6 @@
   {%- include footer.html -%}
 
 </body>
+//-->
 
 </html>
