--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 
-Under construction
+<!-- Under construction -->
 
 
 {%- include head.html -%}
-<!--
+
 <body>
 
   {%- include header.html -%}
@@ -38,6 +38,6 @@ Under construction
   {%- include footer.html -%}
 
 </body>
-//-->
+
 
 </html>
